--- a/terminal.html
+++ b/terminal.html
@@ -68,6 +68,7 @@
         function loadTerminal() {
             terminalDatabase.push("Zhifty Terminal");
             terminalDatabase.push("The first client side terminal ever!");
+            terminalDatabase.push("Write --help for a list of commands");
             terminalDatabase.push("");
             const formatTerminalDatabase = terminalDatabase + "";
             const formattedTerminalDatabase = formatTerminalDatabase.split(",").join("<br>");
