--- a/terminal.html
+++ b/terminal.html
@@ -196,6 +196,8 @@
                     setTimeout(() => {
                         location.reload();
                     }, 3000);
+                    terminalPrefix.style.display = "none";
+                    terminalInput.style.display = "none";
                     pushCommand();
                 }
                 else {
