--- a/terminal.html
+++ b/terminal.html
@@ -115,6 +115,7 @@
                     terminalDatabase.push("--lookup 88.888.888.88 | Lookup any Ip adress");
                     terminalDatabase.push("--color green | Change color to anything you would like");
                     terminalDatabase.push("--ipconfig | Get you're Ip adress");
+                    terminalDatabase.push("--matrix | Display the matrix");
                     terminalDatabase.push("");
                     const formatTerminalDatabase = terminalDatabase + "";
                     const formattedTerminalDatabase = formatTerminalDatabase.split(",").join("<br>");
