--- a/terminal.html
+++ b/terminal.html
@@ -193,10 +193,15 @@
                     pushCommand();
                 }
                 else if(terminalInput.value.includes("matrix")) { //launch the matrix
-                    sessionStorage.setItem("matrix", "true");
+                    terminalDatabase.push("$ " + terminalInput.value);
+                    terminalDatabase.push("Launching the matrix...");
+                    terminalDatabase.push("");
                     terminalPrefix.style.display = "none";
                     terminalInput.style.display = "none";
-                    location.reload();
+                    sessionStorage.setItem("matrix", "true");
+                    setInterval(() => {
+                        location.reload();
+                    }, 3000);
                     pushCommand();
                 }
                 else {
