--- a/projects/audiovisualizer/index.html
+++ b/projects/audiovisualizer/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>My Eq</title>
+    <title>Audio Visualizer</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <style>
 
