--- a/projects/audiovisualizer/index.html
+++ b/projects/audiovisualizer/index.html
@@ -23,6 +23,7 @@
             background-size: cover;
 
             filter: blur(15px);
+            z-index: -5;
 
         }
 
@@ -30,7 +31,7 @@
 
             position: absolute;
 
-            top: 200px;
+            top: 120px;
             right: 0;
             left: 0;
 
@@ -63,7 +64,7 @@
         }
 
         .fileButtonDivider{
-            margin: 5%;
+            margin: 3%;
             border: none;
         }
 
@@ -71,27 +72,31 @@
             text-align: center;
         }
 
-        #upload{
-           background: white;
-           width: 180px;
+        .fileButton{
+            cursor: pointer;
+            border: black solid 2px;
+            border-radius: 20px;
+            padding: 10px;
+        }
+
+        .fileButton:hover{
+            color: white;
+            background: rgb(0, 0, 0);
         }
     </style>
 
 </head>
 <body>
-
-<audio id="audio" controls style="display: none;"><source src="" id="src"></audio>
-<!--div class="background"></div-->
-<div class="track-title">Audio Vizualizer</div>
-<div class="vz-container">
-    <div class="visualizer-container"></div>
+<div>
+    <audio id="audio" controls style="display: none;"><source src="" id="src"></audio>
+        <div class="track-title">Audio Visualizer</div>
+        <div class="vz-container"><div class="visualizer-container"></div></div>
+        <hr class="fileButtonDivider">'
+        <div class="fileButtonContainer">
+            <label class="fileButton" for="upload">Choose mp3 file</label>
+            <input type="file" name="" id="upload" accept=".mp3" style="display: none;">
+        </div>
 </div>
-<hr class="fileButtonDivider">'
-<div class="fileButtonContainer">
-    <input type="file" name="" id="upload" accept=".mp3">
-</div>
-
-
 
 <script>
 
@@ -142,10 +147,9 @@
         }
 
         renderFrame();
-
-        audio.volume = 0.10;
+        
+        audio.volume = 1.0;
         audio.play();
-
     };
 
     function handleFiles(event) {
@@ -155,11 +159,9 @@
     }
 
     document.getElementById("upload").addEventListener("change", handleFiles, false);
-
     document.getElementById("upload").addEventListener("change", function() {
         play()
     });
-
 </script>
 
 </body>
