--- a/projects/solarsystem/index.html
+++ b/projects/solarsystem/index.html
@@ -13,8 +13,8 @@
     </script>
   </head>
   <body>
-    <div class="webgl-content" style="width: 100vw; height: 100vh">
-      <div id="unityContainer"></div>
+    <div class="webgl-content">
+      <div id="unityContainer" style="width: 100vw; height: 90vh"></div>
       <div class="footer">
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
         <div class="title">Solar System</div>
