--- a/projects/solarsystem/index.html
+++ b/projects/solarsystem/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Solar System</title>
+    <title>Unity Solar System</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
@@ -14,11 +14,7 @@
   </head>
   <body>
     <div class="webgl-content">
-      <div id="unityContainer" style="width: 100vw; height: 96vh"></div>
-      <div class="footer">
-        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">Solar System</div>
-      </div>
+      <div id="unityContainer" style="width: 100vw; height: 100vh"></div>
     </div>
   </body>
 </html>
