Main Page Reset

--- a/projects.html
+++ b/projects.html
@@ -17,8 +17,8 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="#">
-                    <h4>Computer Audio Visualizer</h4>
+                <a href="./index.html">
+                    <h4>CodeZhifty</h4>
                 </a>
             </div>
             <ul class="nav-links">
@@ -35,5 +35,6 @@
         </nav>
     </header>
 
+    <script src="./script.js"></script>
 </body>
 </html>
