--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@1,500&display=swap" rel="stylesheet">
-    <title>Computer Audio Visualizer</title>
+    <title>CodeZhifty</title>
     <style>
         body{
             overflow: hidden;
@@ -27,15 +27,15 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            animation: googleHome;
+            animation: infoDiv;
             animation-duration: 3s;
-            transform: translateY(80px);
+            transform: translateY(60px);
             font-family: 'Source Code Pro', monospace;
         }
 
-        @keyframes googleHome{
+        @keyframes infoDiv{
             0%{ transform: translateY(500px); }
-            100%{ transform: translateY(80px); }
+            100%{ transform: translateY(60px); }
         }
 
         .googleHomeButton{
@@ -50,12 +50,12 @@
                 width: 400px;
             }
             .anim-container{
-                transform: translateY(40px) !important; 
+                transform: translateY(40px); 
             }
             .googleHomeText{
-                font-size: 15px !important;
+                font-size: 15px;
             }
-            @keyframes googleHome{
+            @keyframes infoDiv{
                 0%{ transform: translateY(500px); }
                 100%{ transform: translateY(40px); }
             }
@@ -63,7 +63,7 @@
 
         @media screen and (max-width:768px){
             .anim-container{
-                display: block !important;
+                display: block;
                 margin: auto;
                 padding: 10px;
                 align-items: unset;
@@ -74,6 +74,11 @@
                 overflow-y: auto;
             }
         }
+
+        .hr{
+            border: none;
+            margin: 5px;
+        }
     </style>
 </head>
 <body>
@@ -81,13 +86,13 @@
         <nav>
             <div class="logo">
                 <a href="#">
-                    <h4>Computer Audio Visualizer</h4>
+                    <h4>CodeZhifty</h4>
                 </a>
             </div>
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="./about.html">About</a></li>
-                <li><a href="./initialize.html">Initialize</a></li>
+                <li><a href="./projects.html">Projects</a></li>
                 <li><a href="https://github.com/Top-Of-Tech/VizCDT", target="blank">Github</a></li>
             </ul>
             <div class="menubtn">
@@ -100,21 +105,27 @@
 
     <div class="anim-container">
         <span class="googleHomeText">
-            Having your own assistant is cool, but can you
+            CodeZhifty who am i?
             <br>
-            make it look cool. now you can with GUGLOHOMA!
+            Im a programmer currently focused on webdev.
+            <br>
+            I mainly do webdev, frontend and backend but also c# and unity.
+            <br>
+            <hr class="hr">
+            Frontend: Html, Css, Javascript and c#
+            <hr class="hr">
+            Backend: NeDB/MongoDB and Firebase
             <br>
             <br>
             <a href="./initialize.html"><button class="googleHomeButton" style="font-family: 'Source Code Pro', monospace; cursor: pointer;">Initialize</button></a>
         </span>
-        <img src="./googlehome.png" class="googleHomeImg">
+        <img src="./professions.png" class="googleHomeImg">
     </div>
     
     <script>
         setTimeout(() => {
-            document.addEventListener("mousemove", function(e) {
-                const img = document.querySelector(".googleHomeImg");
-
+            const img = document.querySelector(".googleHomeImg");
+            img.addEventListener("mousemove", function(e) {
                 let xAxis = (window.innerWidth / 2 - e.pageX) / 15;
                 let yAxis = (window.innerHeight / 2 - e.pageY) / 15;
                 img.style.transform = `rotateY(${-xAxis}deg) rotateX(${-yAxis}deg)`
