Changed github link

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./projects.html">Projects</a></li>
-                <li><a href="https://github.com/Top-Of-Tech/VizCDT", target="blank">Github</a></li>
+                <li><a href="https://github.com/CodeZhifty/codezhifty", target="blank">Github</a></li>
             </ul>
             <div class="menubtn">
                 <div class="line1"></div>
