--- a/projects.html
+++ b/projects.html
@@ -24,8 +24,8 @@
             <ul class="nav-links">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About</a></li>
-                <li><a href="#">Initialize</a></li>
-                <li><a href="https://github.com/Top-Of-Tech/VizCDT", target="blank">Github</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="https://github.com/CodeZhifty/codezhifty", target="blank">Github</a></li>
             </ul>
             <div class="menubtn">
                 <div class="line1"></div>
