--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
             I mainly do webdev, frontend and backend but also c# and unity.
             <br>
             <hr class="hr">
-            Frontend: Html, Css, Javascript and c#
+            <strong>Frontend:</strong> Html, Css, Javascript and c#
             <hr class="hr">
-            Backend: NeDB/MongoDB and Firebase
+            <strong>Backend:</strong> NeDB/MongoDB and Firebase
             <br>
             <br>
             <a href="./initialize.html"><button class="googleHomeButton" style="font-family: 'Source Code Pro', monospace; cursor: pointer;">Initialize</button></a>
