--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
             border-radius: 5px;
             border: none;
             font-size: 15px;
+            color: black;
+            background-color: white;
+        }
+
+        .googleHomeButton:hover{
+            background-color: rgb(194, 194, 194);
         }
 
         @media screen and (max-width:1500px){
@@ -90,7 +96,7 @@
                 </a>
             </div>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
+                <li><a href="#" style="background-color: black; border-radius: 5px; padding: 8px; text-shadow: none;">Home</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./projects.html">Projects</a></li>
                 <li><a href="https://github.com/CodeZhifty/codezhifty", target="blank">Github</a></li>
@@ -117,7 +123,7 @@
             <strong>Backend:</strong> NeDB/MongoDB and Firebase
             <br>
             <br>
-            <a href="./initialize.html"><button class="googleHomeButton" style="font-family: 'Source Code Pro', monospace; cursor: pointer;">Initialize</button></a>
+            <a href="./about.html"><button class="googleHomeButton" style="font-family: 'Source Code Pro', monospace; cursor: pointer;">Read More!</button></a>
         </span>
         <img src="./professions.png" class="googleHomeImg">
     </div>
