--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
             <ul class="nav-links">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="#" style="background-color: black; border-radius: 5px; padding: 8px; text-shadow: none;">Projects</a></li>
                 <li><a href="https://github.com/CodeZhifty/codezhifty", target="blank">Github</a></li>
             </ul>
             <div class="menubtn">
