--- a/about.html
+++ b/about.html
@@ -23,13 +23,13 @@
             justify-content: center;
             animation: infoDiv;
             animation-duration: 3s;
-            transform: translateY(180px);
+            transform: translateY(150px);
             font-family: 'Source Code Pro', monospace;
         }
 
         @keyframes infoDiv{
             0%{ transform: translateY(500px); }
-            100%{ transform: translateY(180px); }
+            100%{ transform: translateY(150px); }
         }
 
         .googleHomeButton{
@@ -104,7 +104,8 @@
             If you like my website then take a look at my <a href="https://www.youtube.com/channel/UC4LcW0lHrIKFIHGQki8qVMg" style="color: white;" target="_blank">Youtube</a> channel.<br>
             You could also head over to my <a href="https://github.com/CodeZhifty/codezhifty" style="color: white;" target="_blank">Github</a> repo if youre interested<br>
             <hr class="hr">
-            This repo including this website and all my projects is <a href="" style="color: white;" target="_blank">MIT Licensed</a>
+            This repo including this website and all my projects is <a href="https://github.com/CodeZhifty/codezhifty/blob/main/LICENSE" style="color: white;" target="_blank">MIT Licensed</a><br>
+            Even tho its MIT Licensed you cant use any of my projects for earnings.
         </span>
     </div>
 
