--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
         .googleHomeText{
             color: white;
             font-size: 20px;
+            font-weight: bold;
         }
 
         .anim-container{
