--- a/about.html
+++ b/about.html
@@ -106,8 +106,8 @@
             If you like my website then take a look at my <a href="https://www.youtube.com/channel/UC4LcW0lHrIKFIHGQki8qVMg" style="color: white;" target="_blank">Youtube</a> channel.<br>
             You could also head over to my <a href="https://github.com/CodeZhifty/codezhifty" style="color: white;" target="_blank">Github</a> repo if youre interested<br>
             <hr class="hr">
-            This repo including this website and all my projects is <a href="https://github.com/CodeZhifty/codezhifty/blob/main/LICENSE" style="color: white;" target="_blank">MIT Licensed</a><br>
-            Even tho its MIT Licensed you cant use any of my projects for earnings.
+            This repo including this website and all my projects is <a href="https://github.com/CodeZhifty/codezhifty/blob/main/LICENSE" style="color: white;" target="_blank">Copyright</a> claimed!<br>
+            Dont try to make money or copy the repo including this website and all my projects.
         </span>
     </div>
 
