fix hidden overflow

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>CodeZhifty</title>
     <style>
         body{
-            overflow: hidden;
+            overflow: hidden !important;
             perspective: 100px;
         }
 
