--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <title>Computer Audio Visualizer</title>
     <style>
         body{
-            overflow: hidden;
+            overflow: hidden !important;
         }
     </style>
 </head>
