--- a/projects/zia/index.html
+++ b/projects/zia/index.html
@@ -34,9 +34,13 @@
             justify-content: space-between !important;
         }
 
-        a{
+        .header a{
             text-decoration: none;
             color: white;
+        }
+
+        .header a:hover{
+            color: rgb(192, 192, 192);
         }
     </style>
 </head>
