--- a/projects/zia/login.html
+++ b/projects/zia/login.html
@@ -51,6 +51,10 @@
             padding: 5px;
             cursor: pointer;
         }
+        
+        #login:hover{
+            background-color: rgb(192, 192, 192);
+        }
     </style>
 </head>
 <body>
