--- a/projects/zia/index.html
+++ b/projects/zia/index.html
@@ -54,7 +54,7 @@
         <h1>Zhifty Investigation Agency</h1>
         <div id="terminal"></div>
 
-        <embed src="https://zhiftydk.github.io/codezhifty/projects/terminal/index.html" type="" style="width: 1200px; height: 650px; border-radius: 20px;">
+        <embed src="https://codezhifty.github.io/codezhifty/projects/terminal/index.html" type="" style="width: 1200px; height: 650px; border-radius: 20px;">
     </div>
 
     <script>
